QmlCompiler: Allow conversion from QQmlListProperty to QList

-- Cherry pick: Allow the conversion in the propagator but reject in
generator. This makes qmllint happy for QTBUG-107521.

Fixes: QTBUG-107521
Change-Id: I8b2b0ac74c90b6dcee876e83a64502756733c1c5
(cherry picked from commit fa259ed4ff84a5952cdb6d2c6215e92d65afa56a)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>